# crane_localization

./: .gitignore  .gitmodules  CMakeLists.txt  ORBVocabulary.h  README.md  camera_model.cc  camera_model.h  config_parser.cc  config_parser.h  frame.cc  frame.h  frame.hpp  g2o_types_linear_motion.cc  g2o_types_linear_motion.h  gridmatcher.cc  gridmatcher.h  initialize.hpp  initializer.cc  initializer.h  intrinsic.h  localization.cc  localization.h  loopclosing.cc  loopclosing.h  map.cc  map.h  mappoint.cc  mappoint.h  optimizer.cc  optimizer.h  run.sh  system.cc  system.h  undistort.cc  undistort.h  utils.cc  utils.h  websocket_endpoint.cpp  websocket_endpoint.h
.VSCodeCounter/: details.md  results.csv  results.md  results.txt
conf/: BL-EX346HP-15M.yaml  BL-EX346HP-15M_0.25.yaml  crane_info.txt  crane_info_bk.txt  pipeline.yaml  pipeline_online.yaml
doc/: 天车定位说明文档.docx
test/: CMakeLists.txt  test.cc  test_DBoW2.cc  test_SSIM.cc  test_initialize_map.cc  test_initializer.cc  test_system.cc  test_trainingVoc.cc  test_undistort.cc  test_undistort_fisheye.cc  test_websocket.cc
vocabulary/: README.md
